# ai-agentic-platform-avivo-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/knowledge_base/: code_of_conduct.md  expense_policy.md  leave_policy.md  onboarding_guide.md  remote_work_policy.md
scripts/: ingest.py  test_rag_cli.py
tests/: conftest.py  test_ingest.py  test_shared_config.py
tests/test_bot/: test_allowlist.py  test_handlers.py  test_integration.py  test_rate_limit.py
tests/test_rag/: test_chunker.py  test_embedder.py  test_generator.py  test_loader.py  test_searcher.py
tests/test_storage/: test_cache.py  test_db.py  test_history.py  test_vector_store.py
tests/test_vision/: test_captioner.py
