[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agentic-platform-avivo-bot"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "sqlite-vec>=0.1.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "nltk>=3.8",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["packages*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "packages"]
testpaths = ["tests"]
